re PR target/24757 (__sync_fetch_and_add on ia64)

PR target/24757
	* config/ia64/ia64.c (ia64_expand_atomic_op): Fix condition of cmp
	insn.

From-SVN: r107246